--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "hhnigatu/hhnigatuu.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Hellina Hailu Nigatu""
+  name             : "Hellina Hailu Nigatu"
   pronouns         : # example: "she/her"  
   bio              : "CS PhD Student at UC Berkeley. Working on HCI, NLP and AI Ethics."
   location         : #"Earth"
